# testingincpp

./: .gitignore  CMakeLists.txt
src/: student_evaluation.cpp  student_evaluation.hpp
tests/: test_student_evaluation.cpp
